--- a/index.html
+++ b/index.html
@@ -10,34 +10,99 @@
 </head>
 
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>
     <div class="container">
-        <span class="navbar-brand">Bool Factory</span>
-        <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-            <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Servizi</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contatti</a>
-                </li>
-            </ul>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <span class="navbar-brand">Bool Factory</span>
+            <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Servizi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contatti</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <header class="mt-4">
+            <div class="row">
+                <div class="col-8 col-sm-6">
+                    <h2> Richiesta Preventivo</h2>
+
+                    <form>
+
+                        <fieldset disabled>
+                            <legend>Compila il form richiedere un preventivo per i nostri servizi di sviluppo</legend>
+
+                            <div class="mb-3">
+                                <label for="disabledTextInput" class="form-label">Disabled input</label>
+                                <input type="text" id="disabledTextInput" class="form-control"
+                                    placeholder="Disabled input">
+                            </div>
+                            <div class="mb-3">
+                                <label for="disabledSelect" class="form-label">Disabled select menu</label>
+                                <select id="disabledSelect" class="form-select">
+                                    <option>Disabled select</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
+                                    <label class="form-check-label" for="disabledFieldsetCheck">
+                                        Can't check this
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </fieldset>
+                    </form>
+
+                </div>
+
+                <div class="col-4 col-sm-6">
+                    <div class="card" style="width: 25rem;">
+                        <img src="img/coding-logo-in-a-modern-style-Graphics-7189080-1.jpg" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">I Nostri Contatti</h5>
+                            <p class="card-text">Se hai bisogno di aiuto puoi contattarci:</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Help@boolfactory.test</li>
+                            <li class="list-group-item">+39 33030030</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Help Desk</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+
+        <footer class="mt-4 py-3 bg-dark">
+            <div class="container text-center">
+                <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
+            </div>
+        </footer>
+
     </div>
-</nav>
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="./app.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
 </body>
 
 </html>
