Da completare il form bootstrap

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <form>
 
                         <fieldset disabled>
-                            <legend>Compila il form richiedere un preventivo per i nostri servizi di sviluppo</legend>
+                            <legend>Compila il form per richiedere un preventivo per i nostri servizi di sviluppo
+                            </legend>
 
                             <div class="mb-3">
                                 <label for="disabledTextInput" class="form-label">Disabled input</label>
