Completato html - bootstrap

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
             </div>
         </header>
 
-        <div class="text-center my-2 ">
+
+        <div class="text-center my-2 border border-dark rounded" style="max-width: 600px;">
             <h2 class="align-items-center">Prezzo Finale</h2>
             <div class="price-container" id="price"></div>
         </div>
+
 
     </div>
 
