--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/app.css">
     <title>Boolean Factory</title>
 </head>
 
@@ -40,7 +39,7 @@
                         <div class="form-group">
                             <div class="row g-3">
                                 <div class="col-md-6">
-                                    <label for="Name">Nome</label>
+                                    <label for="InputName">Nome</label>
                                     <input type="text" class="form-control" id="InputName" placeholder="Name">
                                 </div>
                                 <div class="form-group">
