--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <div class="row">
                 <div class="col-8 col-sm-6">
                     <h2> Richiesta Preventivo</h2>
-                    <form>
+                    <form onsubmit="formSubmit(event)">
                         <div class="form-group">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <label for="InputName">Nome</label>
                                     <input type="text" class="form-control" id="InputName" placeholder="Name">
                                 </div>
-                                <div class="form-group">
+                                <div class="col-md-6">
                                     <label for="LastName">Cognome</label>
                                     <input type="text" class="form-control" id="LastName" placeholder="LastName">
                                 </div>
@@ -51,7 +51,6 @@
                                     <label for="Email">Email</label>
                                     <input type="email" class="form-control" id="Email" placeholder="Email">
                                 </div>
-
                                 <div class="form-group">
                                     <label for="SelezionaLavoro" class="form-label">Seleziona il tipo di lavoro
                                         richiesto</label>
@@ -80,6 +79,7 @@
                         </div>
                         <button type="submit" id="Button" class="btn btn-primary">Calcola Preventivo</button>
                     </form>
+
 
                 </div>
                 <div class="col-4 col-sm-6">
