--- a/index.html
+++ b/index.html
@@ -33,28 +33,32 @@
 
         <header class="mt-4">
             <div class="row">
-                <div class="col-8 col-sm-6">
+                <div class="col-6 col-sm-6">
                     <h2> Richiesta Preventivo</h2>
-                    <form onsubmit="formSubmit(event)">
+                    <form id="preventivoForm">
                         <div class="form-group">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <label for="InputName">Nome</label>
-                                    <input type="text" class="form-control" id="InputName" placeholder="Name">
+                                    <input type="text" class="form-control" id="InputName" placeholder="Name"
+                                        name="uname" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="LastName">Cognome</label>
-                                    <input type="text" class="form-control" id="LastName" placeholder="LastName">
+                                    <input type="text" class="form-control" id="LastName" placeholder="Lastname"
+                                        LastName="uname" required>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="Email">Email</label>
-                                    <input type="email" class="form-control" id="Email" placeholder="Email">
+                                    <input type="email" class="form-control" id="Email" placeholder="Email"
+                                        Email="uname" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="SelezionaLavoro" class="form-label">Seleziona il tipo di lavoro
                                         richiesto</label>
                                     <select id="SelezionaLavoro" class="form-select">
+                                        <option>---</option>
                                         <option>Backed Development</option>
                                         <option>Frontend Development</option>
                                         <option>Project Analysis</option>
@@ -72,6 +76,8 @@
                             <label for="Code">Codice Promozionale (Facoltativo)</label>
                             <input type="text" class="form-control" id="Code" placeholder="Code">
                         </div>
+                        <div id="codeError"></div>
+
 
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="Policy">
@@ -82,10 +88,10 @@
 
 
                 </div>
-                <div class="col-4 col-sm-6">
-                    <div class="card" style="width: 25rem;">
-                        <img src="img/coding-logo-in-a-modern-style-Graphics-7189080-1.jpg" class="card-img-top"
-                            alt="...">
+                <div class="col-6 col-sm-6">
+                    <div class="card" style="width: 65%;">
+                        <img src="img/coding-logo-in-a-modern-style-Graphics-7189080-1.jpg"
+                            class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">I Nostri Contatti</h5>
                             <p class="card-text">Se hai bisogno di aiuto puoi contattarci:</p>
@@ -99,6 +105,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </header>
 
@@ -109,16 +116,16 @@
         </div>
 
 
+
+
+        <footer class="mt-4 py-3 bg-dark">
+            <div class="container text-center">
+                <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
+            </div>
+        </footer>
+
     </div>
-
-    <footer class="mt-4 py-3 bg-dark">
-        <div class="container text-center">
-            <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
-        </div>
-    </footer>
-
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
 </body>
