--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </div>
         </nav>
 
-        <header class="mt-4">
-            <div class="row">
-                <div class="col-6 col-sm-6">
-                    <h2> Richiesta Preventivo</h2>
+        <header class="container-fluid mt-3">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-9">
+                    <h2>Richiesta Preventivo</h2>
                     <form id="preventivoForm">
                         <div class="form-group">
                             <div class="row g-3">
@@ -85,11 +85,9 @@
                         </div>
                         <button type="submit" id="Button" class="btn btn-primary">Calcola Preventivo</button>
                     </form>
-
-
                 </div>
-                <div class="col-6 col-sm-6">
-                    <div class="card" style="width: 65%;">
+                <div class="col-12 col-sm-3">
+                    <div class="card w-100">
                         <img src="img/coding-logo-in-a-modern-style-Graphics-7189080-1.jpg"
                             class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -105,26 +103,19 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </header>
 
-
-        <div class="text-center my-2 border border-dark rounded" style="max-width: 600px;">
+        <div class="text-center my-2 border border-dark rounded" style="max-width: 600px; margin: 0 auto;">
             <h2 class="align-items-center">Prezzo Finale</h2>
             <div class="price-container" id="price"></div>
         </div>
-
-
-
 
         <footer class="mt-4 py-3 bg-dark">
             <div class="container text-center">
                 <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
             </div>
         </footer>
-
-    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
