--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <span class="navbar-brand">Bool Factory</span>
-            <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Servizi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contatti</a>
-                    </li>
-                </ul>
+    <header class="pb-5">
+        <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
+            <div class="container">
+                <span class="navbar-brand">Bool Factory</span>
+                <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servizi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contatti</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
+    </header>
 
-        <header class="container-fluid mt-3">
-            <div class="row justify-content-center">
+    <main class="d-flex justify-content-center">
+        <div class="container mt-3">
+            <div class="d-flex justify-content-center">
                 <div class="col-12 col-sm-9">
                     <h2>Richiesta Preventivo</h2>
                     <form id="preventivoForm">
@@ -104,19 +108,20 @@
                     </div>
                 </div>
             </div>
-        </header>
-
-        <div class="text-center my-2 border border-dark rounded" style="max-width: 600px; margin: 0 auto;">
-            <h2 class="align-items-center">Prezzo Finale</h2>
-            <div class="price-container" id="price"></div>
         </div>
+    </main>
 
-        <footer class="mt-4 py-3 bg-dark">
-            <div class="container text-center">
-                <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
-            </div>
-        </footer>
+    <div class="text-center my-2 border border-dark rounded" style="max-width: 600px; margin: 0 auto;">
+        <h2 class="align-items-center">Prezzo Finale</h2>
+        <div class="price-container" id="price"></div>
     </div>
+
+    <footer class="mt-5 py-3 bg-dark">
+        <div class="container text-center">
+            <span class="text-white">© 2024 Bool Factory. All rights reserved.</span>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
 </body>
