--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <header class="pb-5">
-        <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <span class="navbar-brand">Bool Factory</span>
-                <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarText"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -34,11 +34,11 @@
         </nav>
     </header>
 
-    <main class="d-flex justify-content-center">
+    <main>
         <div class="container mt-3">
-            <div class="d-flex justify-content-center">
-                <div class="col-12 col-sm-9">
-                    <h2>Richiesta Preventivo</h2>
+            <div class="row justify-content-center">
+                <div class="col-lg-9">
+                    <h2 class="mb-4">Richiesta Preventivo</h2>
                     <form id="preventivoForm">
                         <div class="form-group">
                             <div class="row g-3">
@@ -90,8 +90,8 @@
                         <button type="submit" id="Button" class="btn btn-primary">Calcola Preventivo</button>
                     </form>
                 </div>
-                <div class="col-12 col-sm-3">
-                    <div class="card w-100">
+                <div class="col-lg-3">
+                    <div class="card">
                         <img src="img/coding-logo-in-a-modern-style-Graphics-7189080-1.jpg"
                             class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
